--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Myapp is a text based utility which can be maniplute the text" />
+  <meta name="description"
+    content="Myapp is a word counter and a character counting utility which can be used to manipulate yout text in the way you want.You can remove extra space , copy the manipulated text as well as convert your text from upppercase to lowercase and vice versa" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <title>My App</title>
+  <title>My App - Word Counter | character counter | lowercase to upppercase</title>
 </head>
 
 <body>
